# log_reader

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  log_reader.sln
ci/appveyor/: setenv.bat
log_reader/: CMakeLists.txt  log_reader.cpp  log_reader.h  log_reader.vcxproj  log_reader.vcxproj.filters  pattern.h
log_reader/include/: log_reader.h  log_reader_result.h
log_reader/src/: log_reader.cpp  log_reader_result.cpp  log_reader_string_result.cpp  log_reader_string_result.h  pattern.cpp  pattern.h  pattern_element.cpp  pattern_element.h  search_engine.cpp  search_engine.h  search_stream.cpp  search_stream.h  search_stream_file_direct.cpp  search_stream_file_direct.h  search_stream_file_generic.cpp  search_stream_file_generic.h  search_stream_file_windowed.cpp  search_stream_file_windowed.h
test_app/: CMakeLists.txt  ascii_string.cpp  ascii_string.h  log_reader_file_result.cpp  log_reader_file_result.h  test_app.cpp  test_app.vcxproj  test_app.vcxproj.filters
unit_tests/: CMakeLists.txt  logreader_unit_tests_main.cpp  logreader_unit_tests_match.cpp  logreader_unit_tests_pattern.cpp  logreader_unit_tests_pointer_guard.h  logreader_unit_tests_search.cpp  logreader_unit_tests_sss.cpp  logreader_unit_tests_sss.h
